force-app/main/default/objects/Krow__QB_Integration__c/Krow__QB_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting is deprecated and move to custom object.</description>
    <label>QB Integration</label>
</CustomObject>