force-app/main/default/objects/Krow__QB_Integration__c/fields/Krow__Access_Token_Secret__c.field-meta.xml
<CustomField>
    <fullName>Krow__Access_Token_Secret__c</fullName>
    <label>Access Token Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>