force-app/main/default/objects/Krow__QB_Integration__c/fields/Krow__API_Sandbox_Url__c.field-meta.xml
<CustomField>
    <fullName>Krow__API_Sandbox_Url__c</fullName>
    <description>API url to integrate with quickbook</description>
    <label>API Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>