force-app/main/default/objects/Krow__QB_Integration__c/fields/Krow__Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>Krow__Consumer_Key__c</fullName>
    <label>Consumer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>