force-app/main/default/objects/Krow__QB_Integration__c/fields/Krow__Default_Company__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this company is default for klient to quickbook invoice integration?</description>
    <label>Default Company</label>
    <type>Checkbox</type>
</CustomField>