force-app/main/default/objects/Krow__QB_Integration__c/fields/Krow__Deprecated__c.field-meta.xml
<CustomField>
    <fullName>Krow__Deprecated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deprecated</label>
    <type>Checkbox</type>
</CustomField>