force-app/main/default/objects/Krow__QB_Integration__c/fields/Krow__QB_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__QB_Company_Id__c</fullName>
    <label>QB Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>