force-app/main/default/objects/Krow__QB_Integration__c/fields/Krow__Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Krow__Refresh_Token__c</fullName>
    <label>Refresh Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>