force-app/main/default/objects/Krow__QB_Integration__c/fields/Krow__Refresh_Token_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Refresh_Token_Issue_Date__c</fullName>
    <label>Refresh Token Issue Date</label>
    <type>Date</type>
</CustomField>